Media Query Added

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="timerDisplay">
             00 : 00 : 00 : 000
         </div>
-        <div class="button">
+        <div class="div-button">
             <button id="startTimer">Start</button>
             <button id="pauseTimer">Pause</button>
-            <button id="resetTimer">Reset</button>
+            <button id="resetTimer" class="resetBTN">Reset</button>
         </div>
     </div>
     <script src="index.js"></script>
